# weather-tui

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml  docker-test.sh
.github/workflows/: rust.yml
src/: main.rs
src/app/: mod.rs
src/backend/: config.rs  mod.rs
src/terminal/: mod.rs  weather_condition.rs
