[package]
name = "weather-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.0", features = ["json"] }
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
tokio = { version = "1.0.2", features = ["full"] }
ratatui = { version = "0.23.0", features = ["all-widgets"] }
crossterm = "0.27.0"
toml = "0.8"
tokio-stream = "0.1.14"
